create dossier service (#3)
* add emaildto and new api to openapi.yaml

* create new module

* add docker-compose-yaml

* fill the data to db

* create producer to the kafka

* refactor some code

* add new api

* realize new api's logic

* add logging to deal-service

* resolve some issues

* create consumer

* refactor of strategy pattern

* add tests

* delete unused imports

* add disabled test

* refactor disabled test
