# api/src/main/resources/static/openapi.yaml
@@ -122,6 +122,114 @@ paths:
           description: No Content
         '400':
           description: Bad Request
+  /deal/document/{statementId}/send:
+    post:
+      summary: Отправка запроса на получение документов
+      operationId: sendRequestForDocument
+      parameters:
+        - in: path
+          name: statementId
+          schema:
+            type: string
+          required: true
+          description: Идентификатор заявки
+      responses:
+        '204':
+          description: No Content
+        '400':
+          description: Неверный идентификатор заявки
+        '404':
+          description: Заявка не найдена
+        '500':
+          description: Внутренняя ошибка сервера
+  /deal/document/{statementId}/sign:
+    post:
+      summary: Отправка запроса на подписание документов
+      operationId: sendRequestForSignDocument
+      parameters:
+        - in: path
+          name: statementId
+          schema:
+            type: string
+          required: true
+          description: Идентификатор заявки
+      responses:
+        '204':
+          description: No Content
+        '400':
+          description: Неверный идентификатор заявки
+        '404':
+          description: Заявка не найдена
+        '500':
+          description: Внутренняя ошибка сервера
+  /deal/document/{statementId}/{code}:
+    post:
+      summary: Подписание документов
+      operationId: signDocument
+      parameters:
+        - in: path
+          name: statementId
+          schema:
+            type: string
+          required: true
+          description: Идентификатор заявки
+        - in: path
+          name: code
+          schema:
+            type: integer
+          required: true
+          description: SES-код
+      responses:
+        '204':
+          description: No Content
+        '400':
+          description: Неверный идентификатор заявки
+        '404':
+          description: Заявка не найдена
+        '500':
+          description: Внутренняя ошибка сервера
+  /deal/dossier/statement/status:
+    put:
+      summary: Update application status
+      description: Updates the status of an application.
+      parameters:
+        - in: query
+          name: statementId
+          schema:
+            type: string
+          required: true
+      responses:
+        '204':
+          description: Application status updated successfully.
+        '400':
+          description: Bad request.
+        '404':
+          description: Application not found.
+        '500':
+          description: Internal server error.
+  /deal/dossier/statement:
+    get:
+      summary: Get SES code by statement ID
+      description: Retrieves the SES code for a given statement ID.
+      parameters:
+        - in: query
+          name: statementId
+          schema:
+            type: string
+          required: true
+      responses:
+        '200':
+          description: SES code retrieved successfully.
+          content:
+            application/json:
+              schema:
+                type: integer
+        '400':
+          description: Bad request.
+        '404':
+          description: Statement not found.
+        '500':
+          description: Internal server error.
 components:
   schemas:
     LoanStatementRequestDto:
@@ -473,6 +581,30 @@ components:
           type: string
           allOf:
             - $ref: '#/components/schemas/ChangeType'
+    EmailMessage:
+      type: object
+      properties:
+        address:
+          type: string
+          format: email
+          description: Адрес электронной почты получателя
+        theme:
+          type: string
+          allOf:
+            - $ref: '#/components/schemas/Theme'
+        statementId:
+          type: string
+          format: uuid
+          description: Идентификатор заявки
+    Theme:
+      type: string
+      enum:
+        - FINISH_REGISTRATION
+        - CREATE_DOCUMENT
+        - YOUR_LOAN_DOCUMENTS
+        - SIGN_DOCUMENTS_WITH_SES_CODE
+        - CREDIT_ISSUED
+        - APPLICATION_DENIED
     Gender:
       type: string
       enum:
